--- a/src/1/filtering_list_elements/CMakeLists.txt
+++ b/src/1/filtering_list_elements/CMakeLists.txt
@@ -3,8 +3,7 @@ project(filtering_list_elements)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(libs)
-
-add_subdirectory(${LIBS_DIR}/fmt ${CMAKE_CURRENT_BINARY_DIR}/fmt)
+include(fmt)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
