--- a/src/1/finding_out_what_two_dictionaries_have_in_common/CMakeLists.txt
+++ b/src/1/finding_out_what_two_dictionaries_have_in_common/CMakeLists.txt
@@ -4,7 +4,7 @@ project(finding_out_what_two_dictionaries_have_in_common)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(libs)
 
-add_subdirectory(${LIBS_DIR}/fmt ${CMAKE_CURRENT_BINARY_DIR}/fmt)
+add_subdirectory(${LIBS_DIR}/fmt ${CMAKE_CURRENT_BINARY_DIR}/../../fmt)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
