--- a/src/1/finding_the_largest_or_smallest_n_items/CMakeLists.txt
+++ b/src/1/finding_the_largest_or_smallest_n_items/CMakeLists.txt
@@ -4,7 +4,7 @@ project(finding_the_largest_or_smallest_n_items)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(libs)
 
-add_subdirectory(${LIBS_DIR}/fmt ${CMAKE_CURRENT_BINARY_DIR}/fmt)
+add_subdirectory(${LIBS_DIR}/fmt ${CMAKE_CURRENT_BINARY_DIR}/../../fmt)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
