--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(1/calculating_with_dictionaries)
 #add_subdirectory(1/filtering_list_elements)
 #add_subdirectory(1/finding_out_what_two_dictionaries_have_in_common)
 #add_subdirectory(1/finding_the_largest_or_smallest_n_items)
+add_subdirectory(7/accessing_variables_defined_inside_a_closure)
