Fix cmake build error issue

--- a/src/1/calculating_with_dictionaries/CMakeLists.txt
+++ b/src/1/calculating_with_dictionaries/CMakeLists.txt
@@ -2,18 +2,17 @@ cmake_minimum_required(VERSION 3.3)
 project(calculating_with_dictionaries)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
-include(fmt)
-include(libs)
+include(all)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
-add_executable(example example.cpp)
+add_executable(calculating_with_dictionaries example.cpp)
 
 target_include_directories(
-	example	PRIVATE
-    ${FMT_INCLUDE_DIR}
+	calculating_with_dictionaries PRIVATE
+	${FMT_INCLUDE_DIR}
 	${RANGE_INCLUDE_DIR})
 
 target_link_libraries(
-	example
+	calculating_with_dictionaries
 	fmt)
