--- a/src/1/filtering_list_elements/CMakeLists.txt
+++ b/src/1/filtering_list_elements/CMakeLists.txt
@@ -2,17 +2,16 @@ cmake_minimum_required(VERSION 3.3)
 project(filtering_list_elements)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
-include(libs)
 include(fmt)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
-add_executable(example example.cpp)
+add_executable(filtering_list_elements example.cpp)
 
 target_include_directories(
-	example	PRIVATE
+	filtering_list_elements PRIVATE
 	${RANGE_INCLUDE_DIR})
 
 target_link_libraries(
-	example
+	filtering_list_elements
 	fmt)
