--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.3)
 project(python-cookbook-in-modern-cpp)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../cmake/")
-include(fmt)
+include(all)
 
 add_subdirectory(1/calculating_with_dictionaries)
 add_subdirectory(3/determining_last_fridays_date)
-#add_subdirectory(1/determine_the_top_n_items_occurring_in_a_list)
-#add_subdirectory(1/filtering_list_elements)
-#add_subdirectory(1/finding_out_what_two_dictionaries_have_in_common)
-#add_subdirectory(1/finding_the_largest_or_smallest_n_items)
+#add_subdirectory(3/finding_the_date_range_for_the_current_month)
+# add_subdirectory(1/determine_the_top_n_items_occurring_in_a_list)
+add_subdirectory(1/filtering_list_elements)
+add_subdirectory(1/finding_out_what_two_dictionaries_have_in_common)
+add_subdirectory(1/finding_the_largest_or_smallest_n_items)
 add_subdirectory(7/accessing_variables_defined_inside_a_closure)
