Change exe name of accessing_variables_defined_inside_a_closure sample

--- a/src/7/accessing_variables_defined_inside_a_closure/CMakeLists.txt
+++ b/src/7/accessing_variables_defined_inside_a_closure/CMakeLists.txt
@@ -6,13 +6,13 @@ include(all)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
-add_executable(example1 example1.cpp)
+add_executable(accessing_variables_defined_inside_a_closure1 example1.cpp)
 
 target_include_directories(
-	example1	PRIVATE
-    ${FMT_INCLUDE_DIR}
+	accessing_variables_defined_inside_a_closure1 PRIVATE
+	${FMT_INCLUDE_DIR}
 	${RANGE_INCLUDE_DIR})
 
 target_link_libraries(
-	example1
+	accessing_variables_defined_inside_a_closure1
 	fmt)
