Fix broken cmake files

--- a/src/2/combining_and_concatenating_strings/CMakeLists.txt
+++ b/src/2/combining_and_concatenating_strings/CMakeLists.txt
@@ -6,12 +6,12 @@ include(all)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
-add_executable(example example.cpp)
+add_executable(combining_and_concatenating_strings example.cpp)
 
 target_include_directories(
-	example PRIVATE
+	combining_and_concatenating_strings PRIVATE
 	${RANGE_INCLUDE_DIR})
 
 target_link_libraries(
-    example
+    combining_and_concatenating_strings
 	fmt)
