--- a/src/4/creating_new_iteration_patterns_with_generators/CMakeLists.txt
+++ b/src/4/creating_new_iteration_patterns_with_generators/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.3)
-project(iterating_in_reverse)
+project(creating_new_iteration_patterns_with_generators)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
 set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
-add_executable(iterating_in_reverse example.cpp)
+add_executable(creating_new_iteration_patterns_with_generators example.cpp)
 
 target_include_directories(
-    iterating_in_reverse PRIVATE
+    creating_new_iteration_patterns_with_generators PRIVATE
     ${RANGE_INCLUDE_DIR})
 
 target_link_libraries(
-    iterating_in_reverse
+    creating_new_iteration_patterns_with_generators 
     fmt)
