Add cpp for iterating_in_sorted_order_over_merged_sorted_iterables

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(2/combining_and_concatenating_strings)
 add_subdirectory(3/finding_the_date_range_for_the_current_month)
 add_subdirectory(4/how_to_flatten_a_nested_sequence)
 add_subdirectory(4/iterating_in_reverse)
+add_subdirectory(4/iterating_in_sorted_order_over_merged_sorted_iterables)
 add_subdirectory(4/creating_new_iteration_patterns_with_generators)
 add_subdirectory(4/delegating-iteration)
 add_subdirectory(7/accessing_variables_defined_inside_a_closure)
