--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(7/carrying_extra_state_with_callback_functions)
 #add_subdirectory(7/functions_that_only_accept_keyword_arguments)
 #add_subdirectory(7/functions_with_default_arguments)
 add_subdirectory(7/inlining_callback_functions)
+add_subdirectory(7/making_an_n-argument_callable_work_as_a_callable_with_fewer_arguments)
