--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(3/finding_the_date_range_for_the_current_month)
 add_subdirectory(4/how_to_flatten_a_nested_sequence)
 add_subdirectory(4/creating_new_iteration_patterns_with_generators)
 add_subdirectory(4/delegating-iteration)
+add_subdirectory(4/iterate_over_the_index-value_pairs_of_a_list)
 add_subdirectory(4/iterating_in_reverse)
 add_subdirectory(4/iterating_in_sorted_order_over_merged_sorted_iterables)
 add_subdirectory(4/iterating_on_items_in_separate_containers)
