--- a/src/1/calculating_with_dictionaries/CMakeLists.txt
+++ b/src/1/calculating_with_dictionaries/CMakeLists.txt
@@ -4,7 +4,7 @@ project(calculating_with_dictionaries)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(calculating_with_dictionaries example.cpp)
 
