--- a/src/1/determine_the_top_n_items_occurring_in_a_list/CMakeLists.txt
+++ b/src/1/determine_the_top_n_items_occurring_in_a_list/CMakeLists.txt
@@ -4,7 +4,7 @@ project(determine_the_top_n_items_occurring_in_a_list)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(determine_the_top_n_items_occurring_in_a_list example.cpp)
 
