--- a/src/1/filtering_list_elements/CMakeLists.txt
+++ b/src/1/filtering_list_elements/CMakeLists.txt
@@ -4,7 +4,7 @@ project(filtering_list_elements)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(fmt)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(filtering_list_elements example.cpp)
 
