--- a/src/1/keeping_the_last_n_items/CMakeLists.txt
+++ b/src/1/keeping_the_last_n_items/CMakeLists.txt
@@ -4,7 +4,7 @@ project(keeping_the_last_n_items)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17 -stdlib=libc++")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(keeping_the_last_n_items example.cpp)
 
