--- a/src/1/sort_a_list_of_dictionaries_by_a_common_key/CMakeLists.txt
+++ b/src/1/sort_a_list_of_dictionaries_by_a_common_key/CMakeLists.txt
@@ -4,7 +4,7 @@ project(sort_a_list_of_dictionaries_by_a_common_key)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(sort_a_list_of_dictionaries_by_a_common_key example.cpp)
 
