--- a/src/1/transforming_and_reducing_data_at_the_same_time/CMakeLists.txt
+++ b/src/1/transforming_and_reducing_data_at_the_same_time/CMakeLists.txt
@@ -4,7 +4,7 @@ project(transforming_and_reducing_data_at_the_same_time)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(transforming_and_reducing_data_at_the_same_time example.cpp)
 
