--- a/src/2/combining_and_concatenating_strings/CMakeLists.txt
+++ b/src/2/combining_and_concatenating_strings/CMakeLists.txt
@@ -4,7 +4,7 @@ project(combining_and_concatenating_strings)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(combining_and_concatenating_strings example.cpp)
 
