--- a/src/3/finding_the_date_range_for_the_current_month/CMakeLists.txt
+++ b/src/3/finding_the_date_range_for_the_current_month/CMakeLists.txt
@@ -4,7 +4,7 @@ project(finding_the_date_range_for_the_current_month)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(finding_the_date_range_for_the_current_month example.cpp)
 
