--- a/src/4/iterate_over_the_index-value_pairs_of_a_list/CMakeLists.txt
+++ b/src/4/iterate_over_the_index-value_pairs_of_a_list/CMakeLists.txt
@@ -4,7 +4,7 @@ project(iterate_over_the_index-value_pairs_of_a_list)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(iterate_over_the_index-value_pairs_of_a_list example.cpp)
 
