--- a/src/4/iterating_in_sorted_order_over_merged_sorted_iterables/CMakeLists.txt
+++ b/src/4/iterating_in_sorted_order_over_merged_sorted_iterables/CMakeLists.txt
@@ -4,7 +4,7 @@ project(iterating_in_sorted_order_over_merged_sorted_iterables)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(iterating_in_sorted_order_over_merged_sorted_iterables example.cpp)
 
