--- a/src/4/iterating_on_items_in_separate_containers/CMakeLists.txt
+++ b/src/4/iterating_on_items_in_separate_containers/CMakeLists.txt
@@ -4,7 +4,7 @@ project(iterating_on_items_in_separate_containers)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(iterating_on_items_in_separate_containers example.cpp)
 
