--- a/src/7/accessing_variables_defined_inside_a_closure/CMakeLists.txt
+++ b/src/7/accessing_variables_defined_inside_a_closure/CMakeLists.txt
@@ -4,7 +4,7 @@ project(accessing_variables_defined_inside_a_closure)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(accessing_variables_defined_inside_a_closure1 example1.cpp)
 
