--- a/src/7/carrying_extra_state_with_callback_functions/CMakeLists.txt
+++ b/src/7/carrying_extra_state_with_callback_functions/CMakeLists.txt
@@ -4,7 +4,7 @@ project(carrying_extra_state_with_callback_functions)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(carrying_extra_state_with_callback_functions example.cpp)
 
