--- a/src/7/functions_that_only_accept_keyword_arguments/CMakeLists.txt
+++ b/src/7/functions_that_only_accept_keyword_arguments/CMakeLists.txt
@@ -4,7 +4,7 @@ project(functions_that_only_accept_keyword_arguments)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(functions_that_only_accept_keyword_arguments example.cpp)
 
