--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,9 @@ include(all)
 
 add_subdirectory(1/calculating_with_dictionaries)
 add_subdirectory(1/determine_the_top_n_items_occurring_in_a_list)
+add_subdirectory(1/filtering_list_elements)
 add_subdirectory(1/finding_out_what_two_dictionaries_have_in_common)
 add_subdirectory(1/finding_the_largest_or_smallest_n_items)
-#add_subdirectory(1/filtering_list_elements)
 add_subdirectory(1/implementing_a_priority_queue)
 #add_subdirectory(1/keeping_the_last_n_items)
 add_subdirectory(1/mapping_names_to_sequence_elements)
@@ -19,8 +19,9 @@ add_subdirectory(2/combining_and_concatenating_strings)
 #add_subdirectory(3/determining_last_fridays_date)
 add_subdirectory(3/finding_the_date_range_for_the_current_month)
 add_subdirectory(4/creating_new_iteration_patterns_with_generators)
-add_subdirectory(4/how_to_flatten_a_nested_sequence)
 add_subdirectory(4/delegating-iteration)
+add_subdirectory(4/generators_with_state)
+add_subdirectory(4/how_to_flatten_a_nested_sequence)
 add_subdirectory(4/iterate_over_the_index-value_pairs_of_a_list)
 add_subdirectory(4/iterating_in_reverse)
 add_subdirectory(4/iterating_in_sorted_order_over_merged_sorted_iterables)
