--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(1/implementing_a_priority_queue)
 add_subdirectory(1/mapping_names_to_sequence_elements)
 add_subdirectory(1/removing_duplicates_from_a_sequence_while_maintaining_order)
 add_subdirectory(1/sort_a_list_of_dictionaries_by_a_common_key)
+add_subdirectory(1/sort_objects_without_native_comparison_support)
 add_subdirectory(1/transforming_and_reducing_data_at_the_same_time)
 add_subdirectory(2/combining_and_concatenating_strings)
 add_subdirectory(3/determining_last_fridays_date)
