Enable building for determining last fridays

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(1/removing_duplicates_from_a_sequence_while_maintaining_order)
 add_subdirectory(1/sort_a_list_of_dictionaries_by_a_common_key)
 add_subdirectory(1/transforming_and_reducing_data_at_the_same_time)
 add_subdirectory(2/combining_and_concatenating_strings)
-#add_subdirectory(3/determining_last_fridays_date)
+add_subdirectory(3/determining_last_fridays_date)
 add_subdirectory(3/finding_the_date_range_for_the_current_month)
 add_subdirectory(4/creating_new_iteration_patterns_with_generators)
 add_subdirectory(4/delegating-iteration)
