Add cpp for how_to_communicate_between_threads

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(7/carrying_extra_state_with_callback_functions)
 #add_subdirectory(7/functions_with_default_arguments)
 add_subdirectory(7/inlining_callback_functions)
 add_subdirectory(7/making_an_n-argument_callable_work_as_a_callable_with_fewer_arguments)
+add_subdirectory(12/how_to_communicate_between_threads)
