Add cpp for keeping_the_last_n_items

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(1/filtering_list_elements)
 add_subdirectory(1/finding_out_what_two_dictionaries_have_in_common)
 add_subdirectory(1/finding_the_largest_or_smallest_n_items)
 add_subdirectory(1/implementing_a_priority_queue)
-#add_subdirectory(1/keeping_the_last_n_items)
+add_subdirectory(1/keeping_the_last_n_items)
 add_subdirectory(1/mapping_names_to_sequence_elements)
 add_subdirectory(1/removing_duplicates_from_a_sequence_while_maintaining_order)
 add_subdirectory(1/sort_a_list_of_dictionaries_by_a_common_key)
