Fix functions_that_accept_any_number_of_arguments for clang

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ add_subdirectory(4/iterating_in_sorted_order_over_merged_sorted_iterables)
 add_subdirectory(4/iterating_on_items_in_separate_containers)
 add_subdirectory(7/accessing_variables_defined_inside_a_closure)
 add_subdirectory(7/carrying_extra_state_with_callback_functions)
-#add_subdirectory(7/functions_that_accept_any_number_of_arguments)
+add_subdirectory(7/functions_that_accept_any_number_of_arguments)
 #add_subdirectory(7/functions_that_only_accept_keyword_arguments)
 #add_subdirectory(7/functions_with_default_arguments)
 add_subdirectory(7/inlining_callback_functions)
