--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(7/functions_that_accept_any_number_of_arguments)
 #add_subdirectory(7/functions_with_default_arguments)
 add_subdirectory(7/inlining_callback_functions)
 add_subdirectory(7/making_an_n-argument_callable_work_as_a_callable_with_fewer_arguments)
+add_subdirectory(9/applying_decorators_to_class_and_static_methods)
 add_subdirectory(11/creating_a_tcp_server)
 add_subdirectory(12/how_to_communicate_between_threads)
 add_subdirectory(12/how_to_create_a_thread_pool)
